# gymnasium_human_feedback

./: README.md  app.py  binning.py  env_config.py  figure.py  pyproject.toml  requirements.txt  rewards.csv  trajectories.csv
custom_envs/: grid_world.py  register_envs.py
templates/: game.html  index.html
